--- a/portfolio.ipynb
+++ b/portfolio.ipynb
@@ -2344,7 +2344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2410,50 +2410,58 @@
     "\n",
     "def extend_hit(query, seq, hit, window_size):\n",
     "    \"\"\"\n",
-    "    Estende um hit em ambas as direções com base no critério de correspondência.\n",
+    "    Extends a hit in both directions, incorporating mismatch tolerance.\n",
     "\n",
     "    Args:\n",
-    "        query (str): Sequência de consulta.\n",
-    "        seq (str): Sequência alvo.\n",
-    "        hit (tuple): Tuplo com as posições iniciais na query e na sequência.\n",
-    "        window_size (int): Tamanho da janela inicial.\n",
+    "        query (str): Query sequence.\n",
+    "        seq (str): Target sequence.\n",
+    "        hit (tuple): Tuple with initial offsets in query and sequence.\n",
+    "        window_size (int): Initial match window size.\n",
     "\n",
     "    Returns:\n",
-    "        tuple: Índice inicial, tamanho da extensão e número de correspondências.\n",
+    "        tuple: (Start position in query, start position in sequence, total match size, number of matches)\n",
     "    \"\"\"\n",
     "    start_query, start_seq = hit\n",
     "\n",
     "    def extend_in_direction(query, seq, pos_query, pos_seq, direction):\n",
     "        match_size = 0\n",
-    "        num_matches = 0\n",
-    "        mismatch_count = 0\n",
+    "        equal_char = 0\n",
+    "        waiting_match = 0\n",
     "\n",
     "        while 0 <= pos_query < len(query) and 0 <= pos_seq < len(seq):\n",
     "            if query[pos_query] == seq[pos_seq]:\n",
-    "                num_matches += 1\n",
-    "                mismatch_count = 0\n",
+    "                match_size += 1 + waiting_match\n",
+    "                equal_char += 1\n",
+    "                waiting_match = 0  # Reset waiting match on a valid match\n",
     "            else:\n",
-    "                mismatch_count += 1\n",
+    "                waiting_match += 1\n",
     "\n",
-    "            match_size += 1\n",
-    "\n",
-    "            if mismatch_count > match_size // 2:\n",
+    "            # Stop if mismatches exceed allowed threshold\n",
+    "            if (match_size + waiting_match) // 2 > equal_char:\n",
     "                break\n",
     "\n",
+    "            # Move to the next position in the specified direction\n",
     "            pos_query += direction\n",
     "            pos_seq += direction\n",
     "\n",
-    "        return match_size - mismatch_count, num_matches\n",
+    "        # Return total matches and match size for this direction\n",
+    "        return match_size, equal_char\n",
     "\n",
-    "    # Extend left\n",
-    "    left_match_size, left_num_matches = extend_in_direction(query, seq, start_query - 1, start_seq - 1, -1)\n",
-    "    # Extend right\n",
-    "    right_match_size, right_num_matches = extend_in_direction(query, seq, start_query + window_size, start_seq + window_size, 1)\n",
+    "    # Extend to the left\n",
+    "    left_match_size, left_equal_char = extend_in_direction(query, seq, start_query - 1, start_seq - 1, -1)\n",
+    "    # Extend to the right\n",
+    "    right_match_size, right_equal_char = extend_in_direction(query, seq, start_query + window_size, start_seq + window_size, 1)\n",
     "\n",
-    "    total_length = left_match_size + window_size + right_match_size\n",
-    "    total_matches = left_num_matches + window_size + right_num_matches\n",
+    "    # Calculate total matches and match size\n",
+    "    total_match_size = left_match_size + window_size + right_match_size\n",
+    "    total_equal_char = left_equal_char + window_size + right_equal_char\n",
     "\n",
-    "    return (start_query - left_match_size, start_seq - left_match_size, total_length, total_matches)\n",
+    "    # Adjust starting positions based on left extension\n",
+    "    start_query_adjusted = start_query - left_match_size\n",
+    "    start_seq_adjusted = start_seq - left_match_size\n",
+    "\n",
+    "    return (start_query_adjusted, start_seq_adjusted, total_match_size, total_equal_char)\n",
+    "\n",
     "\n",
     "def best_hit(query, seq, window_size):\n",
     "    \"\"\"\n",
@@ -2490,7 +2498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -2515,7 +2523,7 @@
        "<unittest.runner.TextTestResult run=5 errors=0 failures=0>"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
